2006-06-10 Niklas Knutsson  <nq@altern.org>

	* Add "Engineering" display mode

2006-06-01 Niklas Knutsson  <nq@altern.org>

	* Polishing before 0.9.4 release

2006-04-28 Niklas Knutsson  <nq@altern.org>

	* Fix function editing with subfunctions

2006-04-23 Niklas Knutsson  <nq@altern.org>

	* Update documentation
	* Update Swedish translation

2006-04-21 Niklas Knutsson  <nq@altern.org>

	* Display position of current element instead of using bad headers
	* Handle empty matrices

2006-04-18 Niklas Knutsson  <nq@altern.org>

	* unit_edit_label_relation_title did not exist
	* Scroll to current matrix cell

2006-04-12 Niklas Knutsson  <nq@altern.org>

	* New matrix editing using GtkTreeView
	* Show matrix result dialog automatically for all but the smallest of matrices

2006-04-10 Niklas Knutsson  <nq@altern.org>

	* Align matrix/vector table items right
	* Remember visible tab with rpn mode on and off
	* Enhance edit matrix/vector dialog
	* Insert matrix/vector dialog
	* Insert matrix/vector menu items
	* View/edit matrix/vector popup menu item

2006-04-09 Niklas Knutsson  <nq@altern.org>

	* Do not add empty expressions to expression entry history
	* Show default value of arguments in function description

2006-04-08 Niklas Knutsson  <nq@altern.org>

	* Improve RPN mode
	* "Use only keypad keys for RPN operations" option
	* Redirect all unused input to expression entry
	* Avoid focus flicker
	* Localize expressions in unit manager
	* Options to use dot as thousands separator when it is not the default decimal sign

2006-04-07 Niklas Knutsson  <nq@altern.org>

	* True RPN mode

2006-04-02 Niklas Knutsson  <nq@altern.org>

	* Documentation updates

2006-03-29 Niklas Knutsson  <nq@altern.org>

	* Focus text field that caused error after error message
	* Remove delete data sets from recent functions
	* Clear description and object list on data set deletion

2006-03-28 Niklas Knutsson  <nq@altern.org>

	* New icons
	* Use libgnomeui to set icon
